@@ -475,13 +475,7 @@ sub file {
     # first upload file to tmp location, to get md5 sum.
     # than we can decide if we need to replace the current (old) file.
 
-    my @splitted_file = split( /[\/\\]/, $file );
-    my $file_name     = ".rex.tmp." . pop(@splitted_file);
-    my $tmp_file_name = (
-      $#splitted_file != -1
-      ? ( join( "/", @splitted_file ) . "/" . $file_name )
-      : $file_name
-    );
+    my $tmp_file_name = get_tmp_file_name($file);
 
     my $fh    = file_write($tmp_file_name);
     my @lines = split( qr{$/}, $option->{"content"} );
@@ -750,6 +744,20 @@ sub file {
     ->report_resource_end( type => "file", name => $file );
 
   return $__ret->{changed};
+}
+
+sub get_tmp_file_name {
+  my $file = shift;
+
+  my @splitted_file = split( /[\/\\]/, $file );
+  my $file_name     = ".rex.tmp." . pop(@splitted_file);
+  my $tmp_file_name = (
+    $#splitted_file != -1
+    ? ( join( "/", @splitted_file ) . "/" . $file_name )
+    : $file_name
+  );
+
+  return $tmp_file_name;
 }
 
 =head2 file_write($file_name)
